--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
@@ -148,7 +148,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/HUD
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -166,9 +166,9 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/HUD/StartScreen_Game.StartScreen_Game
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game
+OpenAssetsAtExit=/Game/HUD/OptionsMenuWidget.OptionsMenuWidget
 OpenAssetsAtExit=/Game/HUD/PauseMenuWidget.PauseMenuWidget
 
 [RootWindow]
@@ -1062,26 +1062,26 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/SS_Game
 MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HUD/PauseMenuWidget
-MRUItem1=/Game/2DSideScrollerBP/Maps/SS_Game
-MRUItem2=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem3=/Game/HUD/StartScreen_Game
-MRUItem4=/Game/HUD/Start
-MRUItem5=/Game/HUD/Logo
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem7=/Game/BP/BP_Coins
-MRUItem8=/Game/HUD/MainUI
-MRUItem9=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem10=/Game/2DSideScroller/Sprites/Coin
-MRUItem11=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem12=/Game/2DSideScroller/Data/AnimationState
-MRUItem13=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem14=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem15=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem16=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem17=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem18=/Game/2DSideScroller/Textures/2DBackground
-MRUItem19=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem0=/Game/HUD/StartScreen_Game
+MRUItem1=/Game/HUD/OptionsMenuWidget
+MRUItem2=/Game/HUD/PauseMenuWidget
+MRUItem3=/Game/2DSideScrollerBP/Maps/SS_Game
+MRUItem4=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem5=/Game/HUD/Start
+MRUItem6=/Game/HUD/Logo
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem8=/Game/BP/BP_Coins
+MRUItem9=/Game/HUD/MainUI
+MRUItem10=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem11=/Game/2DSideScroller/Sprites/Coin
+MRUItem12=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem13=/Game/2DSideScroller/Data/AnimationState
+MRUItem14=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem15=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem16=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem17=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem18=/Game/2DSideScroller/Animations/P_Ambient_Dust
+MRUItem19=/Game/2DSideScroller/Textures/2DBackground
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2032,6 +2032,32 @@ StartScreen_Game_C.Navigation=True
 StartScreen_Game_C.Localization=True
 StartScreen_Game_C.Designer=True
 StartScreen_Game_C.Layout=True
+PauseMenuWidget_C.Default=True
+PauseMenuWidget_C.Appearance=True
+PauseMenuWidget_C.Designer=True
+PauseMenuWidget_C.Input=True
+PauseMenuWidget_C.Interaction=True
+PauseMenuWidget_C.Performance=True
+PauseMenuWidget_C.Layout=True
+PauseMenuWidget_C.Behavior=True
+PauseMenuWidget_C.Render Transform=True
+PauseMenuWidget_C.Accessibility=True
+PauseMenuWidget_C.Clipping=True
+PauseMenuWidget_C.Navigation=True
+PauseMenuWidget_C.Localization=True
+StartScreen_Game_C.Default=True
+OptionsMenuWidget_C.Appearance=True
+OptionsMenuWidget_C.Input=True
+OptionsMenuWidget_C.Accessibility=True
+OptionsMenuWidget_C.Interaction=True
+OptionsMenuWidget_C.Behavior=True
+OptionsMenuWidget_C.Render Transform=True
+OptionsMenuWidget_C.Performance=True
+OptionsMenuWidget_C.Clipping=True
+OptionsMenuWidget_C.Navigation=True
+OptionsMenuWidget_C.Localization=True
+OptionsMenuWidget_C.Designer=True
+OptionsMenuWidget_C.Layout=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -2056,13 +2082,15 @@ StartScreen_Game_C.Layout=True
 /Game/HUD/Logo.Logo=1
 /Game/HUD/Options.Options=1
 /Game/HUD/Start.Start=1
+/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game=0
+/Game/HUD/StartScreen_Game.StartScreen_Game=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2074,11 +2102,11 @@ Pawn=
 PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2087,6 +2115,8 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 StartScreen_Game_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" "
+PauseMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
+OptionsMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
