--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,12 +93,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1030,6 +1032,8 @@ BlueprintGraph.TimeStamp=2021.08.31-15.21.27
 BlueprintGraph.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.08.31-15.22.12
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.08.31-15.22.07
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1218,24 +1222,72 @@ UserDefinedEnum.Description=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+2DSideScrollerExampleMap_C.Tick=True
+2DSideScrollerExampleMap_C.Replication=True
+2DSideScrollerExampleMap_C.Actor=True
+2DSideScrollerExampleMap_C.Input=True
+SS_Game_C.Appearance=True
+SS_Game_C.Input=True
+SS_Game_C.Interaction=True
+SS_Game_C.Performance=True
+SS_Game_C.Layout=True
+SS_Game_C.Behavior=True
+SS_Game_C.Render Transform=True
+SS_Game_C.Navigation=True
+SS_Game_C.Designer=True
+SS_Game_C.Accessibility=True
+SS_Game_C.Clipping=True
+SS_Game_C.Localization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/Data/AnimationState
-MRUItem2=/Game/2DSideScrollerBP/Sprites/Level1TileMap
-MRUItem3=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
-MRUItem4=/Game/2DSideScrollerBP/Sprites/Tileset
-MRUItem5=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
-MRUItem6=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem7=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem8=/Game/2DSideScrollerBP/Animations/PC_Projectile
-MRUItem9=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
-MRUItem10=/Game/2DSideScrollerBP/Animations/PC_Jump
-MRUItem11=/Game/2DSideScrollerBP/Animations/PC_Idle
-MRUItem12=/Game/2DSideScrollerBP/Animations/PC_Hurt
-MRUItem13=/Game/2DSideScroller/Sprites/RunningAnimation
-MRUItem14=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete
-MRUItem15=/Game/2DSideScrollerBP/_4_Rodriguez_Tileset__1_
+MRUItem0=/Game/Data/SS_Game
+MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem2=/Game/Data/Jack_s_Christmas_Run_TITLE_LOGO
+MRUItem3=/Game/Data/Jack_s_Christmas_Run_START
+MRUItem4=/Game/Data/Jack_s_Christmas_Run_OPTIONS
+MRUItem5=/Game/Data/Jack_s_Christmas_Run_BACKGROUND
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem7=/Game/Data/AnimationState
+MRUItem8=/Game/2DSideScrollerBP/Sprites/Level1TileMap
+MRUItem9=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
+MRUItem10=/Game/2DSideScrollerBP/Sprites/Tileset
+MRUItem11=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
+MRUItem12=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem13=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem14=/Game/2DSideScrollerBP/Animations/PC_Projectile
+MRUItem15=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
+MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Jump
+MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Idle
+MRUItem18=/Game/2DSideScrollerBP/Animations/PC_Hurt
+MRUItem19=/Game/2DSideScroller/Sprites/RunningAnimation
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1251,6 +1303,8 @@ MRUItem15=/Game/2DSideScrollerBP/_4_Rodriguez_Tileset__1_
 /Game/2DSideScrollerBP/Sprites/Tileset.Tileset=1
 /Game/2DSideScrollerBP/Sprites/Level1TileMap.Level1TileMap=1
 /Game/Data/AnimationState.AnimationState=1
+/Game/Data/SS_Game.SS_Game=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1298,21 +1352,106 @@ RecentlyPlaced=/Game/2DSideScrollerBP/4_Rodriguez_CharacterComplete.4_Rodriguez_
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" \"Object.Sprite.KeyFrames.KeyFrames[2]\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0].Vertices.Vertices[18]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0].Vertices.Vertices[4]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+SS_Game_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [DetailCustomWidgetExpansion]
 K2Node_FunctionEntry=
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
