--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,14 +93,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=320,Y=160)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+MultipleInstancePositions=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+NewWindowWidth=1910
+NewWindowHeight=1006
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -163,16 +165,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/HUD/StartScreen_Game.StartScreen_Game
-OpenAssetsAtExit=/Game/HUD/OptionsMenuWidget.OptionsMenuWidget
-OpenAssetsAtExit=/Game/HUD/PauseMenuWidget.PauseMenuWidget
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/HUD/MainUI.MainUI
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
 ScreenPosition=X=670.000 Y=199.000
