--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,13 +94,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -147,7 +148,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1558,32 +1559,39 @@ SS_Game_C.Designer=True
 SS_Game_C.Accessibility=True
 SS_Game_C.Clipping=True
 SS_Game_C.Localization=True
+2DSideScrollerCharacter_C.Animation=True
+K2Node_InputTouch.Input=True
+SS_Game_C.Tick=True
+SS_Game_C.Replication=True
+SS_Game_C.Actor=True
+K2Node_InputAction.Input=True
+MapBuildDataRegistry.Lighting=True
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem1=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/SS_Game
-MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem2=/Game/2DSideScrollerBP/Maps/SS_Game
-MRUItem3=/Game/2DSideScroller/Textures/screenstarter_startcircleANDtext
-MRUItem4=/Game/2DSideScroller/Textures/screenstarter_logo_layer
-MRUItem5=/Game/2DSideScroller/Textures/screenstarter_starttext_layer
-MRUItem6=/Game/2DSideScroller/Textures/screenstarter_background_layer
-MRUItem7=/Game/2DSideScroller/Data/AnimationState
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem9=/Game/2DSideScroller/Textures/Level1_TileMap
-MRUItem10=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
-MRUItem11=/Game/2DSideScroller/Textures/Level1_TileSet
-MRUItem12=/Game/2DSideScroller/animationn/PC_Shoot
-MRUItem13=/Game/2DSideScroller/animationn/PC_Run
-MRUItem14=/Game/2DSideScroller/animationn/PC_Projectile
-MRUItem15=/Game/2DSideScroller/animationn/PC_JumpShoot
-MRUItem16=/Game/2DSideScroller/animationn/PC_JumpUp
-MRUItem17=/Game/2DSideScroller/animationn/PC_JumpDown
-MRUItem18=/Game/2DSideScroller/animationn/PC_idle
-MRUItem19=/Game/2DSideScroller/animationn/PC_Hurt
+MRUItem0=/Game/2DSideScroller/Data/AnimationState
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScroller/Textures/Level1_TileMap
+MRUItem3=/Game/2DSideScroller/FlipBooks/4_Zouvias_Characterdash2
+MRUItem4=/Game/2DSideScroller/FlipBooks/PC_JumpUp
+MRUItem5=/Game/2DSideScroller/FlipBooks/PC_JumpShoot
+MRUItem6=/Game/2DSideScroller/FlipBooks/PC_Hurt
+MRUItem7=/Game/2DSideScroller/Sprites/4_Zouvias_Characterdash2
+MRUItem8=/Game/2DSideScroller/Sprites/4_Zouvias_Characterdash1
+MRUItem9=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem10=/Game/2DSideScrollerBP/Maps/SS_Game
+MRUItem11=/Game/2DSideScroller/Textures/SS_Game
+MRUItem12=/Game/2DSideScroller/Textures/screenstarter_startcircleANDtext
+MRUItem13=/Game/2DSideScroller/Textures/screenstarter_logo_layer
+MRUItem14=/Game/2DSideScroller/Textures/screenstarter_starttext_layer
+MRUItem15=/Game/2DSideScroller/Textures/screenstarter_background_layer
+MRUItem16=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
+MRUItem17=/Game/2DSideScroller/Textures/Level1_TileSet
+MRUItem18=/Game/2DSideScroller/animationn/PC_Shoot
+MRUItem19=/Game/2DSideScroller/animationn/PC_Run
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/animationn/PC_Hurt.PC_Hurt=1
@@ -1607,10 +1615,16 @@ MRUItem19=/Game/2DSideScroller/animationn/PC_Hurt
 /Game/2DSideScroller/Textures/SS_Game.SS_Game=1
 /Game/2DSideScroller/Textures/screenstarter_startcircleANDtext.screenstarter_startcircleANDtext=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
+/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap_BuiltData.2DSideScrollerExampleMap_BuiltData=1
+/Game/2DSideScroller/FlipBooks/4_Zouvias_Characterdash2.4_Zouvias_Characterdash2=1
+/Game/2DSideScroller/FlipBooks/PC_Hurt.PC_Hurt=1
+/Game/2DSideScroller/FlipBooks/PC_JumpShoot.PC_JumpShoot=1
+/Game/2DSideScroller/FlipBooks/PC_JumpUp.PC_JumpUp=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Render Transform.RenderTransform\" "
@@ -1618,7 +1632,7 @@ Visual="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-SS_Game_C="\"Object.Render Transform.RenderTransform\" "
+SS_Game_C=
 UserWidget="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
